--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@
     font-family: 'Anek Devanagari';
     box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
+
+.work:hover img {
+    transform: scale(1.1); /* Slightly zoom in on hover */
 }
+
+.work:hover .layer {
+    height: 100%; /* Reveal the full layer on hover */
+}
+
 body{
     background: black;
     color: white;
@@ -14,13 +20,13 @@ body{
 }
 
 .section {
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     opacity: 0;
     transform: translateY(20px);
-    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
+    transition: transform 0.6s ease-in-out, opacity 0.5s ease-in-out;
     position: relative;
 }
 
@@ -51,7 +57,18 @@ nav{
 }
 
 .logo{
-    width: 160px;
+    font-size: 2rem;
+    color: #262626;
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.5s ease;
+    text-decoration: none;
+}
+.logo span{
+    color: #370397;
+}
+.logo:hover{
+    transform: scale(1.1);
 }
 
 nav ul li{
@@ -71,7 +88,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #370397;
     position: absolute;
     left: 0;
     right: -6px;
@@ -85,15 +102,13 @@ nav ul li a:hover::after{
 .header-text{
     margin-top: 10%;
     font-size: 30px;
-    opacity: 0;
-    transform: scale(2);
-    animation: popOut 0.8s forwards ease-in-out;
+    opacity: 1;
 }
-.header-text h1{
+.header-text h1 p{
     font-size: 60px;
     margin-top: 20px;
+    opacity: 0;
 }
-
 .header-text h1 span{
     color: rgb(212, 21, 34);
 }
@@ -145,7 +160,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #370397;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -160,7 +175,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #370397;
     font-size: 14px;
 }
 .tab-contents{
@@ -173,7 +188,8 @@ nav ul li a:hover::after{
 /* ---------------------------my-services--------------------- */
 
 #services{
-    padding: 30px 0;
+    padding: 25px 0px;
+    margin-bottom: -5px;
 }
 .services-list{
     display: grid;
@@ -202,14 +218,11 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: #047997;
+    background: #370397;
     transform: translateX(10px);
 }
 /* --------------------------portfolio-------------- */
 
-#portfolio{
-    padding: 50px 0;
-}
 .work-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
@@ -272,7 +285,6 @@ nav ul li a:hover::after{
 }
 
 /* -----------------------------contact-------------- */
-
 .contact-left{
     flex-basis: 35%;
 }
@@ -283,7 +295,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #104872;
+    color: #370397;
     margin-right: 15px;
     font-size: 20px;
 }
@@ -291,20 +303,68 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .social-icons a{
+    width: 4rem;
+    height: 4rem;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 0.2rem solid #370397;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 2rem;
     margin-right: 15px;
-    color: #ababab;
-    display: inline-block;
+    border-radius: 45%;
+    display: inline-flex;
     transition: transform 0.5s;
+    transition: 0.3 ease;
+    color: wheat;
 }
 .social-icons a:hover{
-    color: #104872;
+    color: #660840;
     transform: translateY(-3px);
+    transform: scale(1.3);
+    background-color: #370397;
+    box-shadow: 0 0 10px #370397;
+}
+.typing-text{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+.typing-text span{
+    position: relative;
+}
+.typing-text span::before{
+    content: "Ashish";
+    color: #370397;
+    animation: words 5s infinite;
+}
+.typing-text span::after{
+    content: "";
+    /* background-color: black; */
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid black;
+    right: -8;
+    animation: cursor 0.6s infinite;
+}
+
+@keyframes cursor{
+    to{
+        border-left: 3px solid #370397;
+    }
+}
+@keyframes words{
+    0%, 20%{
+        content:"";
+    }
+    21%, 100%{
+        content: 'Ashish';
+    }
 }
 .btn{
     display: inline-block;
-    background: #0484a4;
+    background: #04718c;
     margin: 30px auto;
     width: max-content;
     border: 1px solid #104872;
@@ -337,13 +397,24 @@ form input, form textarea{
 nav .fas{
     display: none;
 }
+html{
+    scroll-behavior: smooth;
+}
 
-@media only screen and (max-width: 600px){
+@media(max-width: 995px){
     #header{
         background-image: url(phone.jpg);
+        background-attachment: fixed;
+    }
+    .about-col-1 img{
+        width: 100%;
+        border-radius: 15px;
+    }
+    #about{
+        display: block;
     }
     .header-text{
-        margin-top: 100%;
+        margin-top: 25%;
         font-size: 16px;
     }
     .header-text h1{
@@ -394,6 +465,8 @@ nav .fas{
         flex-basis: 100%;
     }
 }
+
+
 #msg{
     color: #61b752;
     margin-top: -125px;
@@ -418,9 +491,27 @@ nav .fas{
 #goToTopBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
-@keyframes popOut {
-    to {
-        opacity: 1;
-        transform: scale(1);
+.pop-in {
+    opacity: 0;
+    transform: translateY(30px);
+    animation: popIn 1.5s ease forwards;
+  }
+  #title {
+    animation-delay: 0.5s;
+  }
+  
+  #subtitle {
+    animation-delay: 1.5s;
+  }
+
+  @keyframes popIn {
+    0% {
+      opacity: 0;
+      transform: translateX(30px);
     }
-}
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
